Version 1.95
-------------
Added searchbars to wishlists with options for grouping and sorting
Added searchbars to engineers for searching on name, location, specialization or blueprints
Added pre-engineered Heatsink Launcher V1 blueprint

Version 1.94
-------------
Optimization to copy to clipboard functionality for horizons wishlist to reduce url size
Show remaining indicator to red wishlist ingredients on mouse hover
Added tips to unlocking Odyssey Engineers

Version 1.93
-------------
Shortest path
- Pair experimental with modules when possible
- Make remote workshop always appear first in the list
- Sorting blueprint by type(module, experimental), then name
Handle SendText journal entries for wing style point to emote

Version 1.92
-------------
Added link to about section to the official guide: https://youtu.be/8EXOeB074Zw
Added new filter: Not or more than on wishlist
- Shows all the materials you have that are not on a wishlist or exceeding the total required amount of all wishlists
Added wishlist amount on hover
swap ES/FR locales for horizons commodities
Sorted list of trading materials (only sorted on application launch)
Added help tooltips to wislist tabs
Process modules before experimental effects in shortest path calculation(could reduce number of destinations)
Added different list bullet for experimental effects in shortest path

Version 1.91
-------------
Added Thargoid shipwreck POI
Added short range blaster to pulse laser
Added button to add entire loadout to wishlist at once
Added notification on adding loadout to wishist, while there is nothing to add.
- Also prevent creating empty wishlists
Fix sorting of assets on material overview
Correct erroneous barter buy/sell values
Keep order of Asset Types on bartender tab

Version 1.90
-------------
Added new Bartender tab to simulate trading (Work in progress, suggestions appreciated)
Use name of loadout when selecting "Create new" add to wishlist option
Removed some text from the about section