@@ -6,9 +6,7 @@ import nl.jixxed.eliteodysseymaterials.enums.*;
 import nl.jixxed.eliteodysseymaterials.service.LocaleService;
 import nl.jixxed.eliteodysseymaterials.service.StorageService;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class CsvExporter {
@@ -73,6 +71,60 @@ public class CsvExporter {
                             textBuilder.append("\n");
                         })
         );
+        return textBuilder.toString();
+    }
+
+    public static String createCsvInventory() {
+        final StringBuilder textBuilder = new StringBuilder();
+        textBuilder.append(String.join(",", "Material", "Amount Backpack", "Amount Ship", "Amount Fleetcarrier", "Amount Total"));
+        textBuilder.append("\n");
+        StorageService.getGoods().forEach((material, storage) -> {
+            if (storage.getTotalValue() > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), String.valueOf(storage.getBackPackValue()), String.valueOf(storage.getShipLockerValue()), String.valueOf(storage.getFleetCarrierValue()), String.valueOf(storage.getTotalValue())));
+                textBuilder.append("\n");
+            }
+        });
+        StorageService.getAssets().forEach((material, storage) -> {
+            if (storage.getTotalValue() > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), String.valueOf(storage.getBackPackValue()), String.valueOf(storage.getShipLockerValue()), String.valueOf(storage.getFleetCarrierValue()), String.valueOf(storage.getTotalValue())));
+                textBuilder.append("\n");
+            }
+        });
+        StorageService.getData().forEach((material, storage) -> {
+            if (storage.getTotalValue() > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), String.valueOf(storage.getBackPackValue()), String.valueOf(storage.getShipLockerValue()), String.valueOf(storage.getFleetCarrierValue()), String.valueOf(storage.getTotalValue())));
+                textBuilder.append("\n");
+            }
+        });
+        StorageService.getRaw().forEach((material, amount) -> {
+            if (amount > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), "", String.valueOf(amount), "", String.valueOf(amount)));
+                textBuilder.append("\n");
+            }
+        });
+        StorageService.getEncoded().forEach((material, amount) -> {
+            if (amount > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), "", String.valueOf(amount), "", String.valueOf(amount)));
+                textBuilder.append("\n");
+            }
+        });
+        StorageService.getManufactured().forEach((material, amount) -> {
+            if (amount > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(material.getLocalizationKey()), "", String.valueOf(amount), "", String.valueOf(amount)));
+                textBuilder.append("\n");
+            }
+        });
+        final Set<Commodity> commodities = new HashSet<>();
+        commodities.addAll(StorageService.getCommoditiesShip().keySet());
+        commodities.addAll(StorageService.getCommoditiesFleetcarrier().keySet());
+        commodities.forEach(commodity -> {
+            final Integer shipAmount = StorageService.getCommodityCount(commodity, StoragePool.SHIP);
+            final Integer fcAmount = StorageService.getCommodityCount(commodity, StoragePool.FLEETCARRIER);
+            if (shipAmount + fcAmount > 0) {
+                textBuilder.append(String.join(",", LocaleService.getLocalizedStringForCurrentLocale(commodity.getLocalizationKey()), "", String.valueOf(shipAmount), String.valueOf(fcAmount), String.valueOf(shipAmount + fcAmount)));
+                textBuilder.append("\n");
+            }
+        });
         return textBuilder.toString();
     }
 }
